// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SamlLoginButton /> renders nothing when feature is not active 1`] = `""`;

exports[`<SamlLoginButton /> renders when feature is active 1`] = `
<a
  className="btn login__social-btn login__social-btn--saml"
  href="/login-saml?_destination=http://localhost/"
  title={
    <FormattedMessage
      id="login.saml"
      values={Object {}}
    />
  }
>
  <FormattedMessage
    id="login.saml"
    values={Object {}}
  />
</a>
`;

exports[`<SamlLoginButton /> renders with no prefix 1`] = `
<a
  className="btn login__social-btn login__social-btn--saml"
  href="/login-saml?_destination=http://localhost/"
  title={
    <FormattedMessage
      id="SAML"
      values={Object {}}
    />
  }
>
  <FormattedMessage
    id="SAML"
    values={Object {}}
  />
</a>
`;
